
	This file is in Unicode charset, with UTF-8 encoding.

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2008-10-15

	* bf_compact, bf_copy and bf_tar now support transformed program names
	  (fixes Debian Bug#501947).

	* Update sqlite3 adaptor to take advantage of sqlite3_prepare_v2()
	  API function that appeared in SQLite 3.3.9. The new _v2 interface
	  allows for more specific error messages when executing SQL
	  statements.  Also enable extended result codes for more precise error
	  reporting.

	2008-07-21

	* Update doc/integrating-with-postfix: the script now suggests sendmail
	  -G -i (where -G will be ignored by Postfix before 2.3) to tell
	  Postfix it's a gateway submission, not an original injection; the
	  filter pipe(8) magic for master.cf now suggests flags=Rq (was
	  flags=R), as per Postfix's FILTER_README.

	2008-07-09

	* Drop support for systems that reverse setvbuf arguments. The last
	  systems to do that are reported to be shipped in 1987 by the autoconf
	  manual, so ditch them.

1.1.7	2008-05-04 (released)

	2008-04-30

	* Updated sendmail milter contrib/bogofilter-milter.pl to v1.45
	  (thanks to Jonathan Kamens)

	2008-04-28

	* Added maildir training info to English and French FAQs.
	  Thanks to Karl Schmidt and to Mouss.

	2008-04-26

	* Fix uninitialized variable in lexer.c when unicode is disabled.
	  Patch provided by Roman Trunov.

	2008-04-20

	* In process_arg functions use the val parameter rather than optarg.
	  Patch provided by Roman Trunov.

	2008-04-18

	* Function process_arg now has the same prototype for
	  bogofilter, bogolexer, bogoutil, and bogotune.  The proper
	  version is called by function read_config_file for all